--- a/services.html
+++ b/services.html
@@ -127,7 +127,7 @@
                             &emsp;2023 (Research Track)<br />
                             IEEE/ACM International Conference on Software Engineering (ICSE):<br />
                             &emsp;2023 (Software Engineering in Practice Track)<br />
-                            &emsp;2023 (Artefact Evaluation Track)<br />
+                            &emsp;2023 (Artifact Evaluation Track)<br />
                             &emsp;2023 (Poster Track)<br />
                             &emsp;2022 (Student Research Competition)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
