--- a/services.html
+++ b/services.html
@@ -120,6 +120,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            International Conference on Product-Focused Software Process Improvement (PROFES):<br />
+                            &emsp;2023 (Research Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2023 (Research Track)<br />
                             &emsp;2022, 2021, 2019, 2018 (Tool Demo Track)<br />
