Add JSS Best Reviewer Award 2022

--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,10 @@
                     <h5 class="card-title">Awards</h5>
                     <ul class="fa-ul mb-0 small">
                         <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
+                            Systems and Software, 2022
+                        </li>
+                        <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> Top Reviewer Award - Elsevier Information and Software Technology, 2021
                         </li>
                         <li>
