--- a/services.html
+++ b/services.html
@@ -124,6 +124,9 @@
                             &emsp;2023 (Research Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2023 (Research Track)<br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
+                            &emsp;2023, 2022, 2021 (Research Track)<br />
+                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             &emsp;2022, 2021, 2019, 2018 (Tool Demo Track)<br />
                             European Conference on Service-Oriented and Cloud Computing (ESOCC):<br />
                             &emsp;2023 (Research Track)<br />
@@ -146,9 +149,6 @@
                             &emsp;2021 (Reproducibility Studies and Negative Results Track)<br />
                             &emsp;2021, 2020 (Tool Demo Track)<br />
                             &emsp;2020 (Journal First Track)<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
-                            &emsp;2022, 2021 (Research Track)<br />
-                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE):<br />
                             &emsp;2020 (Tool Demo Track)<br />
                             &emsp;2019 (Artifact Evaluation Track)<br />
