--- a/teaching.html
+++ b/teaching.html
@@ -98,16 +98,27 @@
                                     <td>Software Dependability</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2023<br />
+                                    <td>Fall 2023<br />
+                                        Spring 2023<br />
                                         Spring 2022 (co-lectured with <a href="https://fpalomba.github.io/"
                                             target="blank">F. Palomba</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering for Secure Cloud Systems</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2024 (co-lectured with <a href="https://docenti.unisa.it/004724/home"
+                                            target="blank">C. Gravino</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Object Oriented Programming</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                    <td>Fall 2023 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                        target="blank">V. Deufemia</a>)<br />
+                                        Fall 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)
                                     </td>
                                 </tr>
@@ -122,8 +133,7 @@
                                 <tr>
                                     <td>Data Engineering</td>
                                     <td>MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
-                                        Eindhoven)</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University)</td>
                                     <td>Fall 2021 (co-lectured with <a
                                             href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank"> D.A. Tamburri</a>, <a
@@ -145,8 +155,7 @@
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
-                                        Eindhoven)</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University)</td>
                                     <td>Spring 2021<br />
                                         Spring 2020 (co-lectured with
                                         <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
@@ -156,7 +165,7 @@
                                 <tr>
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
-                                    <td>Tilburg University, Technical University Eindhoven</td>
+                                    <td>Tilburg University</td>
                                     <td>Fall 2019 (co-lectured with <a
                                             href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
                                             target="blank"> M.C. Kaptein</a>)</td>
