New teaching, services, and teaching

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,27 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
-                <!-- <h2 class="mb-2">Current Projects</h2>-->
+                <h2 class="mb-2">Current Projects</h2>
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">SMARTITUDE</h4>
+                        <p class="card-text text-justify small">Decentralized finance (DeFi) is changing finance, having
+                            prominence from the summer of 2020 with yield farming and the rise of tokens promising
+                            attractive yields to crypto traders. DeFi is based on blockchain, a decentralized,
+                            distributed digital ledger, where transactions are used to transfer cryptocurrency from one
+                            address to another and deploy and interact with blockchain smart contracts (BSC). Once
+                            passed the consensus check and written to
+                            the blockchain, a BSC and its transactions are immutable, despite programming defects,
+                            security vulnerabilities, or faulty transactions. Incorrect computations are frozen forever
+                            in the blockchain. Therefore, achieving accurate and comprehensive testing and verification
+                            of BSC failures and security vulnerabilities requires specific approaches that consider the
+                            persistent nature of code in this novel programming model.
+                            Smartitude aims to provide a comprehensive set of software engineering methods and tools to
+                            improve the BSC quality assurance by leveraging automated test case generation and formal
+                            methods.</p>
+                        <!--<p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>-->
+                    </div>
+                </div>
 
                 <h2 class="mb-2">Previous Projects</h2>
 
