--- a/services.html
+++ b/services.html
@@ -77,8 +77,13 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
-                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on Software Engineering and Advanced Applications</a>: Program
+                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
+                                Software Engineering and Advanced Applications</a>: Program
                             Chair<br />
+                            <a href="http://sattose.org/2023/" target="blank">15th Seminar on Advanced Techniques &
+                                Tools for Software Evolution</a>: Program Chair<br />
+                            <a href="https://sesalabunisa.github.io/ISSSE-2023/" target="blank">16th
+                                International Summer School on Software Engineering</a>: Organizer<br />
                             <a href="https://benevol2021.github.io/" target="blank">20th Belgium-Netherlands
                                 Software Evolution Workshop</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2021" target="blank">29th International
@@ -88,15 +93,13 @@
                             <a href="https://conf.researchr.org/home/icpc-2020" target="blank">28th International
                                 Conference on Program Comprehension</a>: Publicity Co-Chair<br />
                             <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">1st
-                                International Workshop on ENgineering Intelligent Applications' Code</a>: Program
+                                1st International Workshop on ENgineering Intelligent Applications' Code</a>: Program
                             Chair<br />
                             <a href="http://soft.vub.ac.be/benevol2019/" target="blank">18th Belgium-Netherlands
                                 Software Evolution Workshop</a>: Organizer<br />
-                            <a href="http://www.sesa.unisa.it/seschool/" target="blank">14th International Summer School
-                                on Software Engineering</a>: Committee Member<br />
-                            <a href="http://www.sesa.unisa.it/seschool/previousEditions/2017/" target="blank">13th
+                            <a href="https://sesalabunisa.github.io/en/issse.html?year=2017" target="blank">13th
                                 International Summer School on Software Engineering</a>: Scientific Secretariat<br />
-                            <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th
+                            <a href="https://sesalabunisa.github.io/en/issse.html?year=2016" target="blank">12th
                                 International Summer School on Software Engineering</a>: Scientific Secretariat
                         </p>
                     </div>
@@ -106,11 +109,12 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
-                            Elsevier Science of Computer Programming: 2021 - Actual<br />
-                            Elsevier Journal of Systems and Software: 2021 - Actual<br />
-                            IEEE Software - Initiatives Team: 2020 - Actual<br />
-                            IEEE Software Blog: 2019 - Actual<br />
-                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software Health of Software Ecosystems": 2020 -
+                            Elsevier Science of Computer Programming: 2021 - Now<br />
+                            Elsevier Journal of Systems and Software: 2021 - Now<br />
+                            IEEE Software - Initiatives Team: 2020 - Now<br />
+                            IEEE Software Blog: 2019 - Now<br />
+                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software
+                            Health of Software Ecosystems": 2020 -
                             2021<br />
                         </p>
                     </div>
@@ -120,6 +124,11 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
+                            Software Engineering (ESEC/FSE):<br />
+                            &emsp;2024 (Research Track)<br />
+                            &emsp;2020 (Tool Demo Track)<br />
+                            &emsp;2019 (Artifact Evaluation Track)<br />
                             International Conference on Product-Focused Software Process Improvement (PROFES):<br />
                             &emsp;2023 (Research Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
@@ -149,13 +158,11 @@
                             &emsp;2021 (Reproducibility Studies and Negative Results Track)<br />
                             &emsp;2021, 2020 (Tool Demo Track)<br />
                             &emsp;2020 (Journal First Track)<br />
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE):<br />
-                            &emsp;2020 (Tool Demo Track)<br />
-                            &emsp;2019 (Artifact Evaluation Track)<br />
                             IEEE/ACM International Conference on Automated Software Engineering (ASE):<br />
                             &emsp;2020 (Late Breaking Results Track)<br />
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
                             &emsp;2020 (Journal First Track)<br />
+                            International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
                             (MaLTeSQuE): 2022, 2021, 2020, 2019, 2018<br />
                             International Workshop on Quantum Programming for Software Engineering (QP4SE): 2022<br />
@@ -184,27 +191,10 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
-                        <p class="card-text text-justify small">
-                            Innovations in Software Engineering Conference (ISEC): 2022<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2021, 2019, 2018, 2016<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research
-                            Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
-                            International Conference on Evaluation and Assessment in Software Engineering (EASE):
-                            2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):
-                            2018, 2017<br />
-                            International Conference on Business Information Systems (BIS): 2017, 2016, 2015<br />
-                            International Conference on Distributed Multimedia Systems (DMS): 2016, 2015<br />
-                            International Conference on Enterprise Information Systems (ICEIS): 2017, 2016, 2015
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card-horizontal mb-2">
-                    <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
+                            The Quantum Frontier of Software Engineering and its Adoption. SWForum.eu: Workshop on
+                            Future Challenges in SE, Politecnico di Milano, Milan, June 27th, 2023<br />
                             Machine Learning for Software Engineering: the New Gold Rush. Smart Services and Data-driven
                             Societies Summit, University of Molise, Termoli, July 25th, 2022<br />
                             Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, October
@@ -227,15 +217,6 @@
                             Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
                             Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels,
                             Belgium, March 23rd, 2017
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card-horizontal mb-2">
-                    <div class="card-body">
-                        <h4 class="card-title">Student Volunteer</h4>
-                        <p class="card-text text-justify small">
-                            ICSE 2015: 37th International Conference on Software Engineering, Florence, Italy
                         </p>
                     </div>
                 </div>
