--- a/teaching.html
+++ b/teaching.html
@@ -87,11 +87,19 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Empirical Research Methods</td>
+                                    <td>Software Engineering for Secure Cloud Systems</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2024 (co-lectured with <a href="https://docenti.unisa.it/004724/home"
+                                            target="blank">C. Gravino</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Funding and Management of Research Projects</td>
                                     <td>PhD</td>
                                     <td>University of Salerno</td>
-                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>)
+                                    <td>Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                        target="blank">A. De Lucia</a>)
                                     </td>
                                 </tr>
                                 <tr>
@@ -105,14 +113,6 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Software Engineering for Secure Cloud Systems</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Spring 2024 (co-lectured with <a href="https://docenti.unisa.it/004724/home"
-                                            target="blank">C. Gravino</a>)
-                                    </td>
-                                </tr>
-                                <tr>
                                     <td>Object Oriented Programming</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
@@ -120,6 +120,14 @@
                                         target="blank">V. Deufemia</a>)<br />
                                         Fall 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Empirical Research Methods</td>
+                                    <td>PhD</td>
+                                    <td>University of Salerno</td>
+                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
+                                            target="blank">F. Palomba</a>)
                                     </td>
                                 </tr>
                                 <tr>
