Cleanup teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -74,6 +74,48 @@
 
             <div class="row">
                 <div class="col-sm-12">
+                    <h4 class="mb-2">Course Holder</h4>
+                    <div class="table-responsive">
+                        <table class="table table-hover small" style="cursor: pointer;">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Course</th>
+                                    <th>Degree</th>
+                                    <th>University</th>
+                                    <th>Period</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Software Dependability</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Fall 2023<br />
+                                        Spring 2023
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Empirical Research Methods</td>
+                                    <td>PhD</td>
+                                    <td>University of Salerno</td>
+                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
+                                            target="blank">F. Palomba</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Introduction to Machine Learning</td>
+                                    <td>Pre-MSc</td>
+                                    <td>Jheronimus Academy of Data Science</td>
+                                    <td>Spring 2021</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
                     <h4 class="mb-2">Lecturer</h4>
                     <div class="table-responsive">
                         <table class="table table-hover small" style="cursor: pointer;">
@@ -90,15 +132,14 @@
                                     <td>Software Engineering for Secure Cloud Systems</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2024 (co-lectured with <a href="https://docenti.unisa.it/004724/home"
-                                            target="blank">C. Gravino</a>)
+                                    <td>Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home" target="blank">C. Gravino</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Funding and Management of Research Projects</td>
                                     <td>PhD</td>
                                     <td>University of Salerno</td>
-                                    <td>Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                    <td>Winter 2023 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
                                         target="blank">A. De Lucia</a>)
                                     </td>
                                 </tr>
@@ -106,9 +147,7 @@
                                     <td>Software Dependability</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2023<br />
-                                        Spring 2023<br />
-                                        Spring 2022 (co-lectured with <a href="https://fpalomba.github.io/"
+                                    <td>Spring 2022 (course holder: <a href="https://fpalomba.github.io/"
                                             target="blank">F. Palomba</a>)
                                     </td>
                                 </tr>
@@ -116,56 +155,37 @@
                                     <td>Object Oriented Programming</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2023 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                    <td>Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
                                         target="blank">V. Deufemia</a>)<br />
-                                        Fall 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                        Fall 2022 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Empirical Research Methods</td>
-                                    <td>PhD</td>
-                                    <td>University of Salerno</td>
-                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering, Management, and Evolution</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2022 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                    <td>Spring 2022 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
                                             target="blank">A. De Lucia</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Data Engineering</td>
                                     <td>MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University)</td>
-                                    <td>Fall 2021 (co-lectured with <a
-                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> D.A. Tamburri</a>, <a
+                                    <td>Jheronimus Academy of Data Science</td>
+                                    <td>Fall 2021 (course holder: <a
                                             href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W.J. van den Heuvel</a>, <a
-                                            href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
-                                            target="blank"> I. Kumara</a>,<a href="https://www.linkedin.com/in/ekhtiar/"
-                                            target="blank"> E. Syed</a>)
-                                        <br />Fall 2020 (co-lectured with <a
-                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank"> D.A. Tamburri</a>, <a
-                                            href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W.J. van den Heuvel</a>, <a
-                                            href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
-                                            target="blank"> I. Kumara</a>,<a href="https://www.linkedin.com/in/ekhtiar/"
-                                            target="blank"> E. Syed</a>)
+                                            target="blank"> W.J. van den Heuvel</a>)
+                                        <br />Fall 2020 (course holder: <a
+                                        href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
+                                        target="blank"> W.J. van den Heuvel</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Introduction to Machine Learning</td>
                                     <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University)</td>
-                                    <td>Spring 2021<br />
-                                        Spring 2020 (co-lectured with
+                                    <td>Jheronimus Academy of Data Science</td>
+                                    <td>Spring 2020 (course holder:
                                         <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
                                             target="blank">D.A. Tamburri</a>)
                                     </td>
@@ -174,7 +194,7 @@
                                     <td>Data Statistics</td>
                                     <td>BSc</td>
                                     <td>Tilburg University</td>
-                                    <td>Fall 2019 (co-lectured with <a
+                                    <td>Fall 2019 (course holder: <a
                                             href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
                                             target="blank"> M.C. Kaptein</a>)</td>
                                 </tr>
@@ -182,9 +202,9 @@
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
                                     <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 (yearly course, co-lectured with <a
+                                    <td>2019/20 (yearly course, course holder: <a
                                             href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
-                                        <br /> 2018/19 (yearly course, co-lectured with <a
+                                        <br /> 2018/19 (yearly course, course holder: <a
                                             href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
                                     </td>
                                 </tr>
