Add Dagstuhl seminar.

--- a/services.html
+++ b/services.html
@@ -195,6 +195,7 @@
                         <p class="card-text text-justify small">
                             The Quantum Frontier of Software Engineering and its Adoption. SWForum.eu: Workshop on
                             Future Challenges in SE, Politecnico di Milano, Milan, June 27th, 2023<br />
+                            The Do's and Don'ts of Infrastructure Code: a Systematic Grey Literature Review. Dagstuhl Seminar 23082, Dagstuhl, February 21st, 2023<br />
                             Machine Learning for Software Engineering: the New Gold Rush. Smart Services and Data-driven
                             Societies Summit, University of Molise, Termoli, July 25th, 2022<br />
                             Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, October
