Update and cleanup services.

--- a/services.html
+++ b/services.html
@@ -122,46 +122,20 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
+                        <h4 class="card-title">Program Committee Member of International Conferences and Workshops (Research Track)</h4>
                         <p class="card-text text-justify small">
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE):<br />
-                            &emsp;2024 (Research Track)<br />
-                            &emsp;2020 (Tool Demo Track)<br />
-                            &emsp;2019 (Artifact Evaluation Track)<br />
-                            International Conference on Product-Focused Software Process Improvement (PROFES):<br />
-                            &emsp;2023 (Research Track)<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
-                            &emsp;2023 (Research Track)<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
-                            &emsp;2023, 2022, 2021 (Research Track)<br />
-                            &emsp;2020 (New Ideas and Emerging Results Track)<br />
-                            &emsp;2022, 2021, 2019, 2018 (Tool Demo Track)<br />
-                            European Conference on Service-Oriented and Cloud Computing (ESOCC):<br />
-                            &emsp;2023 (Research Track)<br />
-                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
-                            &emsp;2023 (Software Engineering in Practice Track)<br />
-                            &emsp;2023 (Artifact Evaluation Track)<br />
-                            &emsp;2023 (Poster Track)<br />
-                            &emsp;2022 (Student Research Competition)<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems
-                            (MOBILESoft):<br />
-                            &emsp;2023, 2022, 2021 (Technical Papers Track)<br />
-                            &emsp;2019, 2018 (Student Research Competition)<br />
-                            IEEE/ACM International Conference on Mining Software Repositories (MSR):<br />
-                            &emsp;2023, 2022 (Technical Papers Track)<br />
-                            IEEE International Conference on Program Comprehension (ICPC):<br />
-                            &emsp;2023, 2022, 2020 (Research Track)<br />
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE): 2024<br />
+                            IEEE International Conference on Program Comprehension (ICPC): 2024, 2023, 2022, 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
-                            (SANER):<br />
-                            &emsp;2023, 2022, 2021, 2020 (Research Track)<br />
-                            &emsp;2021 (Reproducibility Studies and Negative Results Track)<br />
-                            &emsp;2021, 2020 (Tool Demo Track)<br />
-                            &emsp;2020 (Journal First Track)<br />
-                            IEEE/ACM International Conference on Automated Software Engineering (ASE):<br />
-                            &emsp;2020 (Late Breaking Results Track)<br />
-                            Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
-                            &emsp;2020 (Journal First Track)<br />
+                            (SANER): 2024, 2023, 2022, 2021, 2020<br />
+                            International Conference on Product-Focused Software Process Improvement (PROFES): 2023<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2023<br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023, 2022, 2021<br />
+                            European Conference on Service-Oriented and Cloud Computing (ESOCC): 2023<br />
+                            IEEE/ACM International Conference on Software Engineering (ICSE): 2023 (Software Engineering in Practice Track)<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems
+                            (MOBILESoft): 2023, 2022, 2021<br />
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2023, 2022<br />
                             International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
                             (MaLTeSQuE): 2022, 2021, 2020, 2019, 2018<br />
