--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
                                 Health</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2020" target="blank">28th International
                                 Conference on Program Comprehension</a>: Publicity Co-Chair<br />
-                            <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">1st
+                            <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">
                                 1st International Workshop on ENgineering Intelligent Applications' Code</a>: Program
                             Chair<br />
                             <a href="http://soft.vub.ac.be/benevol2019/" target="blank">18th Belgium-Netherlands
